src/styles/index.module.css
/** Hero */

.hero {
  margin-top: 12rem;
  margin-bottom: 6rem;
  display: flex;
  flex: 1;
  flex-direction: column;

  justify-content: center;
  justify-items: center;
  align-items: center;
  align-content: center;

  color: white;
}

.hero .logo {
  width: 95vw;
}

@media (min-width: 800px) {
  .hero .logo {
    max-width: 1800px;
    width: 75vw;
  }
}

.hero .logo::selection {
  background: transparent;
}

.hero .subtitle {
  font-size: calc(2 * (0.5rem + 1vw));
}

.hero .date {
  font-size: calc(2 * (0.5rem + 1vw));
  text-transform: uppercase;
}

.hero h2::selection,
.hero .subtitle::selection,
.hero .date::selection {
  background: var(--purple);
  color: white;
}

.hero span,
.hero span::selection {
  background: var(--gradient);
  color: white;
}

.hero .centerTicketsButton {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: calc(1 * (4vw) + 5rem);
}

.section {
  margin: 7rem 0;
}

.section .sectionTitle {
  width: 100%;
  color: #fff;
  text-align: center;
  font-size: calc(2 * (0.5rem + 1vw));
  margin-bottom: 1rem;
}

.sectionSubTitle{
  width: 100%;
  color: #fff;
  text-align: center;
  font-size: calc(1.4 * (0.5rem + 1vw));
  margin-bottom: 1rem;
}

.section .sectionTitle::selection {
  background: var(--purple);
  color: white;
}

.section .sectionTitle.black {
  color: #000 !important;
}

@keyframes fadeOutAnimation {
  0% {
    opacity: 1;
  }
  30% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes zIndex {
  0% {
    z-index: 1;
  }
  90% {
    z-index: 1;
  }
  100% {
    z-index: -1;
  }
}

